[package]
name        = "net"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
description = "P2P/Wi-Fi Direct device discovery via wpa_supplicant D-Bus"
 
[dependencies]
tokio       = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
zbus        = { workspace = true }
async-trait = "0.1"
 
[dev-dependencies]
tokio              = { workspace = true, features = ["macros", "rt"] }
tracing-subscriber = { workspace = true }
 